force-app/main/default/objects/Opportunity_Snapshot__c/fields/Company_Focus_List__c.field-meta.xml
<CustomField>
    <fullName>Company_Focus_List__c</fullName>
    <label>Company Focus List</label>
    <length>200</length>
    <type>Text</type>
</CustomField>