force-app/main/default/objects/Opportunity_Snapshot__c/fields/Distributor_Order__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distributor Order</label>
    <type>Checkbox</type>
</CustomField>