force-app/main/default/objects/Opportunity_Snapshot__c/fields/Generated_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Generated_Pipeline__c</fullName>
    <label>Generated / Pipeline</label>
    <length>20</length>
    <type>Text</type>
</CustomField>