force-app/main/default/objects/Opportunity_Snapshot__c/fields/Weighted_Value__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Value__c</fullName>
    <label>Weighted Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>