force-app/main/default/objects/Opportunity_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Owner_Division__c</columns>
    <columns>NAME</columns>
    <columns>Close_Date__c</columns>
    <columns>Year__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Probability__c</columns>
    <columns>Generated_Pipeline__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>9/30/2021</value>
    </filters>
    <filters>
        <field>Created_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2021</value>
    </filters>
    <label>All</label>
</ListView>