force-app/main/default/objects/Opportunity_Snapshot__c/listViews/All_Opp_Snaps.listView-meta.xml
<ListView>
    <fullName>All_Opp_Snaps</fullName>
    <columns>NAME</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Opp Snaps</label>
</ListView>